# pylustrator

./: .gitignore  .hgignore  .hgtags  .readthedocs.yml  .travis.yml  CITATION.bib  CITATION.cff  CLAUDE.md  MANIFEST.in  README.md  complex_example.py  drag_bib.py  list_ignores.sh  pyproject.toml  readme.rst  requirements.txt  sample_pylustrator_output.py  setup.py  temp.py  test_pylustration.py  thisisatest.py  ty.toml
.github/workflows/: publish.yml  pytest.yml  requirements.txt  ruff.yaml
development/: CopyrightNotice.txt  add_copyright_notice.py  raise_version_number.py  release_tools.py  send_to_pypi.py
docs/: api.rst  autobuild.bat  composing.rst  conf.py  example_pylustrator.py  example_pylustrator.py.tmp  figure1.py  index.rst  paper.bib  paper.md  plot1.py  plot2.py  requirements.autobuild.txt  requirements.readthedocs.txt  styling.rst
matplotlib-stubs/: figure.pyi
matplotlib-stubs/matplotlib/: text.pyi
pylustration/: QtGui.py  QtGuiDrag.py  QtShortCuts.py  __init__.py  drag_bib.py  helper_functions.py  matplotlibwidget.py  test_pylustration.py
pylustrator/: QComplexWidgets.py  QLinkableWidgets.py  QtGui.py  QtGuiDrag.py  QtShortCuts.py  __init__.py  _types.py  arc2bez.py  ax_rasterisation.py  change_tracker.py  drag_bib.py  drag_helper.py  exception_swallower.py  helper_functions.py  jupyter_cells.py  lab_colormap.py  matplotlibwidget.py  parse_svg.py  pyjack.py  snap.py  tes_pylustration.py
pylustrator/components/: align.py  figure_previews.py  info_dialog.py  matplotlibwidget.py  plot_layout.py  qitem_properties.py  qpos_and_size.py  tree_view.py
tests/: base_test_class.py  test_axes.py  test_code_generation.py  test_legend.py  test_text.py
