[tool.poetry]
name = "pylustrator"
version = "1.2.1"
description = "Adds interactivity to arrange panels in matplotlib."
authors = ["rgerum <14153051+rgerum@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"
repository = 'https://github.com/rgerum/pylustrator'

[tool.poetry.dependencies]
python = "^3.8"
natsort = ">=2.0.0"
numpy = ">=1.0.3"
matplotlib = ">=2.0.2"
PyQt5 = ">=5.6"
qtawesome = ">=0.5.0"
scikit-image = ">=0.7.0"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
