[project]
name = "pylustrator"
version = "1.3.0"
description = "Adds interactivity to arrange panels in matplotlib."
authors = [{ name = "rgerum", email = "14153051+rgerum@users.noreply.github.com" }]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "natsort>=2.0.0",
    "numpy>=1.0.3",
    "matplotlib>=2.0.2",
    "PyQt5>=5.6",
    "qtawesome>=0.5.0",
    "scikit-image>=0.7.0",
    "qtpy>=2.4.3",
]

[project.optional-dependencies]
dev = ["ruff>=0.14.11", "ty>=0.0.10"]
test = ["pytest>=7.2.0,<8.0.0"]

[tool.ruff]
exclude = ["docs/example_pylustrator.py"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
doc = [
    "nbsphinx>=0.9.8",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-bibtex>=2.6.5",
]

[tool.setuptools]
packages = ["pylustrator"]

